@@ -43,7 +43,7 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jakarta.persistence.NoResultException;
+import javax.persistence.NoResultException;
 
 /**
  * SUSEProductFactory - the class used to fetch and store
@@ -138,7 +138,6 @@ public class SUSEProductFactory extends HibernateFactory {
                         RPM_VERSION_COMPARATOR.compare(b.getProduct().getVersion(), a.getProduct().getVersion()))
                 .toList();
     }
-==== BASE ====
 
     /**
      * Insert or update a {@link SUSEProductExtension}.
@@ -187,7 +186,7 @@ public class SUSEProductFactory extends HibernateFactory {
     public static List<SUSEProductChannel> lookupSyncedProductChannelsByLabel(String channelLabel) {
         return Optional.ofNullable(ChannelFactory.lookupByLabel(channelLabel))
                 .map(channel -> channel.getSuseProductChannels().stream())
-                .orElseGet(Stream::empty).collect(Collectors.toList());
+                .orElseGet(Stream::empty).toList();
     }
 
     /**
@@ -264,7 +263,7 @@ public class SUSEProductFactory extends HibernateFactory {
                     List<String> selectedParts = List.of(channel.getLabel().split("-"));
                     List<String> uniqueParts = selectedParts.stream()
                             .filter(s -> !originalParts.contains(s))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     if (channel.isBaseChannel()) {
                         return Stream.<Channel>empty();
